--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,12 +20,6 @@ body {
   gap: 2rem;
 }
 
-@media screen and (min-width: 1170px) {
-  .container {
-    width: 1170px;
-  }
-}
-
 .header {
   position: relative;
   display: flex;
@@ -44,18 +38,20 @@ body {
   position: absolute;
   top: 70px;
   left: 0;
+  object-fit: contain;
+  z-index: 0;
 }
 
 .title {
   color: #ffffff;
   text-align: right;
+  z-index: 1;
 }
 
 .title-up {
   display: flex;
   flex-direction: column;
   color: #ffffff;
-  margin-bottom: 60px;
 }
 
 .title-up h1 {
@@ -89,20 +85,110 @@ body {
 .title-curo {
   color: #000000;
   text-align: center;
-  font-family: Roboto;
   font-size: 1.5rem;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
   margin: 0;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  gap: 16px;
+  gap: 20px;
   width: 100%;
   padding: 0 15px;
+}
+
+@media screen and (min-width: 620px) {
+  .container {
+    gap: 4rem;
+  }
+
+  .header {
+    flex-direction: row;
+    align-items: center;
+
+    gap: 0.5rem;
+
+    padding: 10px;
+    aspect-ratio: initial;
+    height: 350px;
+
+    margin-top: 40px;
+    border-radius: 20px;
+    border: 14px solid #fbe3e9;
+    box-shadow: 10px 12px 28px -6px rgba(83, 76, 153, 0.25);
+  }
+
+  .header > * {
+    flex: 1;
+  }
+
+  .Elmira {
+    height: 130%;
+    position: initial;
+  }
+
+  .title-up {
+    display: block;
+  }
+
+  .title-up h3 {
+    font-size: 1rem;
+  }
+
+  .title-up h1 {
+    font-size: 1.875rem;
+  }
+
+  .title-down {
+    position: initial;
+    margin-top: 50px;
+  }
+
+  .title-curo {
+    font-size: 3rem;
+  }
+
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 2rem;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  .container {
+    width: 1170px;
+  }
+
+  .header {
+    padding: 0 100px;
+    height: 440px;
+  }
+
+  .title {
+    text-align: left;
+  }
+
+  .title h3 {
+    font-size: 1.5rem;
+  }
+
+  .title h1 {
+    font-size: 2.25rem;
+  }
+
+  .title-down {
+    margin-top: 80px;
+  }
+
+  .Elmira {
+    height: 120%;
+  }
+
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 4rem;
+  }
 }
 
 .grid-item {
@@ -136,6 +222,7 @@ body {
 
 .grid-container-mini img {
   box-shadow: 1px 1px 20px 1px rgba(78, 73, 158, 0.25);
+  width: 30px;
 }
 
 .text-mini {
@@ -143,13 +230,7 @@ body {
   font-size: 1rem;
 }
 
-.splide__slide img {
-  width: 100%;
-  max-height: 80vh;
-  object-fit: contain;
-}
-
-.splide__slide video {
+.splide__slide > * {
   width: 100%;
   max-height: 80vh;
   object-fit: contain;
